sidebar scrolling issues on mobile resolved when changing orientation

--- a/src/assets/fabricator/styles/partials/_layout.scss
+++ b/src/assets/fabricator/styles/partials/_layout.scss
@@ -20,6 +20,10 @@ body {
 		width:100%;
 		height: 100%;
 
+		@include mobile {
+			overflow: hidden;
+		}
+
 		@include desktop {
 			overflow: auto;
 			height: auto;
